--- a/webapp/templates/NavigationBar/nav.html
+++ b/webapp/templates/NavigationBar/nav.html
@@ -11,12 +11,13 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,800" rel="stylesheet" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 </head>
 <body>
     <div class="w3-top">
         <div class="w3-bar w3-black w3-card">
             <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
-                href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i
+                href="javascript:void(0)" onclick="openNav()" title="Toggle Navigation Menu"><i
                     class="fa fa-bars"></i></a>
             <a href="{% url 'Page:page_Index_Page' %}" class="w3-bar-item w3-button w3-padding-large">TRANG CHỦ</a>
             <a href="{% url 'Page:page_present_page' %}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">GIỚI THIỆU</a>
@@ -29,6 +30,23 @@
             <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i
                     class="fa fa-search"></i></a>
         </div>
+        <!-- Navbar on small screens -->
+        <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
+            <a href="{% url 'Page:page_present_page' %}" class="w3-bar-item w3-button">GIỚI THIỆU</a>
+            <a href="{% url 'Page:page_blog_page' %}" class="w3-bar-item w3-button">BÀI VIẾT</a>
+            <a href="{% url 'Page:page_link_page' %}" class="w3-bar-item w3-button">LIÊN HỆ</a>
+            <a href="{% url 'Page:page_login' %}" class="w3-bar-item w3-button">Login</a>
+        </div>
     </div>
+    <script>
+        function openNav() {
+            var x = document.getElementById("navDemo");
+            if (x.className.indexOf("w3-show") == -1) {
+                x.className += " w3-show";
+            } else { 
+                x.className = x.className.replace(" w3-show", "");
+            }
+        }
+    </script>
 </body>
 </html>
