--- a/webapp/templates/NavigationBar/nav_User_or_Manager.html
+++ b/webapp/templates/NavigationBar/nav_User_or_Manager.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,800" rel="stylesheet" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
     <style>
         #lblCartCount {
             font-size: 9px;
@@ -33,7 +34,7 @@
     <div class="w3-top">
         <div class="w3-bar w3-black w3-card">
             <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
-                href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i
+                href="javascript:void(0)" onclick="openNav()" title="Toggle Navigation Menu"><i
                     class="fa fa-bars"></i></a>
             <a href="{% url 'Page:page_Index_User' %}" class="w3-bar-item w3-button w3-padding-large">TRANG CHỦ</a>
             <a href="{% url 'Page:page_present_page' %}" class="w3-bar-item w3-button w3-padding-large w3-hide-small">GIỚI THIỆU</a>
@@ -63,7 +64,27 @@
             </a>
             <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
             {% endif %}
+
+            {% if user.custumer.type == "US" %}
+            <!-- Navbar on small screens -->
+            <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large w3-hide-medium">
+                <a href="{% url 'Page:page_present_page' %}" class="w3-bar-item w3-button">GIỚI THIỆU</a>
+                <a href="{% url 'Page:page_blog_page' %}" class="w3-bar-item w3-button">BÀI VIẾT</a>
+                <a href="{% url 'Page:page_link_page' %}" class="w3-bar-item w3-button">LIÊN HỆ</a>
+                <a href="{% url 'Page:page_ViewProductUserBuy' user.id %}" class="w3-bar-item w3-button">THÔNG TIN SẢN PHẨM MUA</a>
+            </div>
+            {% endif %}
         </div>
+        <script>
+            function openNav() {
+                var x = document.getElementById("navDemo");
+                if (x.className.indexOf("w3-show") == -1) {
+                    x.className += " w3-show";
+                } else { 
+                    x.className = x.className.replace(" w3-show", "");
+                }
+            }
+        </script>
     </div>
 </body>
 </html>
